Fix bug with banner title alignment

--- a/src/styles/components/_title.scss
+++ b/src/styles/components/_title.scss
@@ -5,7 +5,9 @@
         height: lookup($typography, title size whisper);
         margin: {
             right: lookup($sizes, spacing xs);
+            top: 4px;
         }
+        width: auto;
         @include breakpoint(large) {
             height: lookup($typography, title size talk);
         }
